--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://github.com/huacnlee/auto-correct.rs"
 repository = "https://github.com/huacnlee/auto-correct.rs"
 license = "MIT"
 keywords = ["auto-correct", "fmt", "format", "spacing"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
