--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ lazy_static = "1.4.0"
 regex = "1"
 html5ever = "0.25.1"
 markup5ever = "0.10.0"
-markup5ever_rcdom = "*"
+markup5ever_rcdom = "0.1.0"
