--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install Rust
         run: rustup update stable && rustup default stable
 
-      - name: Check out code into the Go module directory
+      - name: Checkout
         uses: actions/checkout@v1
 
       - name: Test
