--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 name = "autocorrect"
 readme = "README.md"
 repository = "https://github.com/huacnlee/auto-correct.rs"
-version = "0.4.3-alpha.0"
+version = "0.4.3"
 
 [lib]
 name = "autocorrect"
