--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ html5ever = "0.25.1"
 lazy_static = "1.4.0"
 markup5ever = "0.10.0"
 markup5ever_rcdom = "0.1.0"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 regex = "1"
 
 [features]
