--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 authors = ["Jason Lee <huacnlee@gmail.com>"]
 description = "Automatically add whitespace between CJK (Chinese, Japanese, Korean) and half-width characters (alphabetical letters, numerical digits and symbols)."
 edition = "2018"
-homepage = "https://github.com/huacnlee/auto-correct.rs"
+homepage = "https://github.com/huacnlee/autocorrect"
 keywords = ["auto-correct", "fmt", "format", "spacing"]
 license = "MIT"
 name = "autocorrect"
 readme = "README.md"
-repository = "https://github.com/huacnlee/auto-correct.rs"
+repository = "https://github.com/huacnlee/autocorrect"
 version = "0.5.3"
 
 [lib]
