--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,8 @@ pest_derive = "2.1.0"
 regex = "1"
 serde_json = "1.0.59"
 
+[dev-dependencies]
+pretty_assertions = "0.7.2"
+
 [features]
 bin = ["clap", "glob"]
