--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,15 @@ path = "src/main.rs"
 required-features = ["bin"]
 
 [dependencies]
+assert-json-diff = "2.0.1"
 clap = {version = "2.33", optional = true}
+difference = "2.0"
 glob = {version = "0.3", optional = true}
 lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1"
+serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0.59"
 
 [dev-dependencies]
