--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Install Rust
         run: rustup update stable && rustup default stable
 
-      - name: Build binary
+      - name: Build
+        run: cargo build --features="bin"
+
+      - name: Lint diff
+        run: make test:lint
+
+      - name: Lint output JSON
         run: |
           cargo run -q --features="bin" -- --lint --format json tests/fixtures/${{ matrix.filename }} | git --no-pager diff --no-index -- tests/fixtures/${{ matrix.filename }}.expect -
