--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,20 @@ path = "src/main.rs"
 required-features = ["bin"]
 
 [dependencies]
-assert-json-diff = "2.0.1"
 clap = {version = "2.33.0", optional = true}
+crossbeam-channel = "0.5.1"
 difference = "2.0"
-glob = {version = "0.3", optional = true}
+ignore = {version = "0.4", optional = true}
 lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0.59"
+walkdir = {version = "2.3.2", optional = true}
 
 [dev-dependencies]
 pretty_assertions = "0.7.2"
 
 [features]
-bin = ["clap", "glob"]
+bin = ["clap", "walkdir", "ignore"]
