--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ required-features = ["bin"]
 
 [dependencies]
 clap = {version = "2.33.0", optional = true}
+colored = {version = "2", optional = true}
 crossbeam-channel = "0.5.1"
 difference = "2.0"
 ignore = {version = "0.4", optional = true}
@@ -36,4 +37,4 @@ walkdir = {version = "2.3.2", optional = true}
 pretty_assertions = "0.7.2"
 
 [features]
-bin = ["clap", "walkdir", "ignore"]
+bin = ["clap", "walkdir", "ignore", "colored"]
