--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 name = "autocorrect"
 readme = "README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "1.0.1"
+version = "1.1.0-beta"
 
 [lib]
 name = "autocorrect"
@@ -26,6 +26,7 @@ crossbeam-channel = "0.5.1"
 difference = "2.0"
 ignore = {version = "0.4", optional = true}
 lazy_static = "1.4.0"
+log = "0.4.5"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1"
