--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,5 +112,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Trigger Docker Build
-        run: curl -XPOST ${{ secrets.DOCKER_HUB_BUILD_HOOK }}
+  docker:
+    runs-on: ubuntu-latest
+    needs: github_release
+    steps:
+      - name: Set output
+        id: vars
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $CURRENT_TAG
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            huacnlee/autocorrect:latest
+            huacnlee/autocorrect:${{ GITHUB_REF#refs/*/ }}
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
