--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,14 +116,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: github_release
     steps:
-      - name: Set output
-        id: vars
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $CURRENT_TAG
+      - uses: olegtarasov/get-tag@v2.1
+        id: tagName
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -137,7 +138,7 @@ jobs:
           push: true
           tags: |
             huacnlee/autocorrect:latest
-            huacnlee/autocorrect:${{ GITHUB_REF#refs/*/ }}
+            huacnlee/autocorrect:${{ steps.tagName.outputs.tag }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
