--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -3,21 +3,25 @@ authors = ["Jason Lee <huacnlee@gmail.com>"]
 description = "A linter and formatter for help you improve copywriting, to correct spaces, punctuations between CJK (Chinese, Japanese, Korean)."
 edition = "2018"
 homepage = "https://github.com/huacnlee/autocorrect"
+keywords = ["auto-correct", "fmt", "format", "spacing"]
 license = "MIT"
 name = "autocorrect"
-readme = "README.md"
+readme = "../../README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "1.3.3"
+version = "1.2.0"
 
-[[bin]]
+[lib]
 name = "autocorrect"
-path = "src/main.rs"
+path = "src/lib.rs"
 
 [dependencies]
-autocorrect = {path = "src/lib", version = "1.0.0"}
-clap = "2.33.0"
-colored = "2"
-ignore = "0.4"
+difference = "2.0"
 lazy_static = "1.4.0"
-log = "0.4.5"
-walkdir = "2.3.2"
+pest = "2.1.3"
+pest_derive = "2.1.0"
+regex = "1"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0.59"
+
+[dev-dependencies]
+pretty_assertions = "0.7.2"
