--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ description = "A linter and formatter for help you improve copywriting, to corre
 edition = "2018"
 homepage = "https://github.com/huacnlee/autocorrect"
 license = "MIT"
-name = "autocorrect"
+name = "autocorrect-bin"
 readme = "README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "1.3.3"
+version = "1.3.4"
 
 [[bin]]
 name = "autocorrect"
 path = "src/main.rs"
 
 [dependencies]
-autocorrect = {path = "src/lib", version = "1.0.0"}
+autocorrect = {path = "src/lib", version = ">1.0.0"}
 clap = "2.33.0"
 colored = "2"
 ignore = "0.4"
