--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 name = "autocorrect"
 readme = "../../README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "1.3.4"
+version = "1.3.5-alpha.0"
 
 [lib]
 name = "autocorrect"
