--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Jason Lee <huacnlee@gmail.com>"]
 description = "A linter and formatter for help you improve copywriting, to correct spaces, punctuations between CJK (Chinese, Japanese, Korean)."
 edition = "2018"
 homepage = "https://github.com/huacnlee/autocorrect"
-keywords = ["auto-correct", "fmt", "format", "spacing"]
+keywords = ["autocorrect", "lint", "format"]
 license = "MIT"
 name = "autocorrect"
 readme = "../../README.md"
@@ -11,6 +11,7 @@ repository = "https://github.com/huacnlee/autocorrect"
 version = "1.3.5"
 
 [lib]
+crate-type = ["cdylib", "rlib"]
 name = "autocorrect"
 path = "src/lib.rs"
 
@@ -22,6 +23,15 @@ pest_derive = "2.1.0"
 regex = "1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0.59"
+wasm-bindgen = "0.2.74"
+wee_alloc = "0.4.5"
 
 [dev-dependencies]
 pretty_assertions = "0.7.2"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
