--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -21,9 +21,9 @@ lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1"
-serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0.59"
-wasm-bindgen = "0.2.74"
+serde = {version = "1.0.127", features = ["derive"]}
+serde_json = "1.0.66"
+wasm-bindgen = {version = "0.2.75", features = ["serde-serialize"]}
 wee_alloc = "0.4.5"
 
 [dev-dependencies]
