--- a/example/package.json
+++ b/example/package.json
@@ -3,8 +3,10 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack": "^5",
+    "webpack-cli": "^4",
+    "webpack-dev-server": "^4",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5"
   }
 }
