--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -17,9 +17,11 @@ path = "src/lib.rs"
 
 [dependencies]
 difference = "2.0"
+getrandom = {version = "0.2.3", features = ["js"]}
 lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
+rand = "0.8.4"
 regex = "1"
 serde = {version = "1.0.127", features = ["derive"]}
 serde_json = "1.0.66"
