--- a/src/lib/Cargo.toml
+++ b/src/lib/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/lib.rs"
 
 [dependencies]
 difference = "2.0"
+ignore = "0.4"
 lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
@@ -31,6 +32,7 @@ pretty_assertions = "0.7.2"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
+lto = true
 opt-level = "s"
 
 [package.metadata.wasm-pack.profile.release]
