Fix clippy check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "autocorrect.formatOnSave": false
+  "autocorrect.formatOnSave": false,
+  "rust-analyzer.updates.channel": "nightly",
+  "rust-analyzer.checkOnSave.command": "clippy"
 }
