--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 homepage = "https://github.com/huacnlee/autocorrect"
 license = "MIT"
 name = "autocorrect-cli"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/huacnlee/autocorrect"
 version = "1.4.4"
 
