Fix npm install binaryen

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -38,10 +38,11 @@ jobs:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Install wasm-pack & wasm-opt
-        run: |
-          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-          sudo apt-get install binaryen
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+
+      - name: Install wasm-opt
+        run: sudo apt install -y binaryen
 
       - name: Publish NPM
         run: |
