--- a/autocorrect/Cargo.toml
+++ b/autocorrect/Cargo.toml
@@ -8,14 +8,14 @@ license = "MIT"
 name = "autocorrect"
 readme = "../README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "1.6.0"
+version = "1.6.1"
 
 [lib]
 name = "autocorrect"
 path = "src/lib.rs"
 
 [dependencies]
-autocorrect-derive = {path = "../autocorrect-derive", version = "0.1.0"}
+autocorrect-derive = {path = "../autocorrect-derive", version = ">=0.1.0"}
 difference = "2.0"
 ignore = "0.4"
 lazy_static = "1.4.0"
