--- a/autocorrect/Cargo.toml
+++ b/autocorrect/Cargo.toml
@@ -23,7 +23,9 @@ pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1"
 serde = {version = "1.0.127", features = ["derive"]}
+serde_any = "0.5.0"
 serde_json = "1.0.66"
+serde_repr = "0.1"
 
 [dev-dependencies]
 bencher = "0.1.5"
