--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -21,5 +21,6 @@ ignore = "0.4"
 lazy_static = "1.4.0"
 log = "0.4.5"
 num_cpus = "1.13.0"
+reqwest = {version = "0.11.10", features = ["blocking"]}
 threadpool = "1.8.1"
 walkdir = "2.3.2"
