--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -21,6 +21,12 @@ ignore = "0.4"
 lazy_static = "1.4.0"
 log = "0.4.5"
 num_cpus = "1.13.0"
-reqwest = {version = "0.11.10", features = ["blocking"]}
 threadpool = "1.8.1"
 walkdir = "2.3.2"
+
+# Config template from remote
+reqwest = {version = "0.11.10", features = ["blocking"]}
+
+# Self Update
+self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "archive-zip", "compression-zip-deflate"]}
+sudo = "0.5"
