--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 authors = ["Jason Lee <huacnlee@gmail.com>"]
-description = "A linter and formatter for help you improve copywriting, to correct spaces, punctuations between CJK (Chinese, Japanese, Korean)."
+description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
 edition = "2018"
 homepage = "https://github.com/huacnlee/autocorrect"
 license = "MIT"
 name = "autocorrect-cli"
 readme = "../README.md"
 repository = "https://github.com/huacnlee/autocorrect"
-version = "1.8.1"
+version = "1.9.0"
 
 [[bin]]
 name = "autocorrect"
