--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -28,5 +28,10 @@ walkdir = "2.3.2"
 reqwest = {version = "0.11.10", features = ["blocking"]}
 
 # Self Update
-self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "archive-zip", "compression-zip-deflate"]}
+self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2"]}
 sudo = "0.5"
+
+[profile.release]
+lto = true 
+opt-level = "z" # Optimize for size.
+strip = true # Automatically strip symbols from the binary.
