--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,10 @@ jobs:
             os: ubuntu-latest
             name: autocorrect-linux-amd64.tar.gz
 
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+            name: autocorrect-linux-arm64.tar.gz
+
           - target: x86_64-apple-darwin
             os: macOS-latest
             name: autocorrect-darwin-amd64.tar.gz
@@ -54,6 +58,12 @@ jobs:
             ~/.cargo/git
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Install OpenSSL
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt update
+          sudo apt install -y libssl-dev
+
       - name: Setup | Rust
         uses: actions-rs/toolchain@v1.0.7
         with:
@@ -67,7 +77,7 @@ jobs:
         with:
           command: build
           args: --release --target ${{ matrix.target }} -Z unstable-options --config 'package.version="${{ steps.tagName.outputs.version }}"'
-          use-cross: ${{ matrix.os == 'ubuntu-latest' }}
+          # use-cross: ${{ matrix.os == 'ubuntu-latest' }}
 
       - name: Post Build | Prepare artifacts [Windows]
         if: matrix.os == 'windows-latest'
@@ -75,6 +85,9 @@ jobs:
           cd target/${{ matrix.target }}/release
           strip autocorrect.exe
           7z a ../../../${{ matrix.name }} autocorrect.exe
+          ./autocorrect.exe --version
+          ./autocorrect.exe init
+          ./autocorrect.exe upgrade
           cd -
 
       - name: Post Build | Prepare artifacts [-nix]
@@ -84,6 +97,9 @@ jobs:
           # TODO: investigate better cross platform stripping
           strip autocorrect || true
           tar czvf ../../../${{ matrix.name }} autocorrect
+          ./autocorrect --version
+          ./autocorrect init
+          ./autocorrect upgrade
           cd -
 
       - name: Deploy | Upload artifacts
