--- a/autocorrect-cli/Cargo.toml
+++ b/autocorrect-cli/Cargo.toml
@@ -27,9 +27,16 @@ walkdir = "2.3.2"
 # Config template from remote
 # Request features:
 # - blocking - for blocking request
-reqwest = {version = "0.11.10", features = ["blocking"]}
+# - rustls-tls - for use native rustls without system openssl dependency
+reqwest = {version = "0.11.10", features = ["blocking", "rustls-tls"], default-features = false}
 
 # Self Update
 # - archive-tar + compression-flate2 - for tar.gz
-self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2"]}
+# - rustls - for use native rustls without system openssl dependency
+self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false}
 sudo = "0.5"
+
+[profile.release]
+lto = true 
+opt-level = "z" # Optimize for size.
+strip = true # Automatically strip symbols from the binary.
