--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: CI
-on: [push]
+on:
+  push:
+    branches:
+      - "*"
+      - "!build-test"
+    tags:
+      - "*"
 jobs:
   build:
     name: Test
