--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,10 +39,10 @@ jobs:
             name: autocorrect-windows-amd64.tar.gz
             arch: x86_64
 
-          - target: aarch64-pc-windows-msvc
-            os: windows-latest
-            name: autocorrect-windows-arm64.tar.gz
-            arch: aarch64
+          # - target: aarch64-pc-windows-msvc
+          #   os: windows-latest
+          #   name: autocorrect-windows-arm64.tar.gz
+          #   arch: aarch64
 
     runs-on: ${{ matrix.os }}
     continue-on-error: true
@@ -77,7 +77,7 @@ jobs:
         with:
           command: build
           args: --release --target ${{ matrix.target }} -Z unstable-options --config 'package.version="${{ steps.tagName.outputs.version }}"'
-          use-cross: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'windows-latest' }}
+          use-cross: ${{ matrix.os == 'ubuntu-latest' }}
 
       - name: Prepare artifacts [Windows]
         if: matrix.os == 'windows-latest'
