--- a/autocorrect-derive/Cargo.toml
+++ b/autocorrect-derive/Cargo.toml
@@ -6,7 +6,7 @@ keywords = ["autocorrect", "lint", "format"]
 license = "MIT"
 name = "autocorrect-derive"
 readme = "../README.md"
-version = "0.1.1"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,4 +15,4 @@ path = "src/lib.rs"
 proc-macro = true
 
 [dependencies]
-syn = {version = "1.0.80", default-features = false, features = ["derive"]}
+syn = "1.0.80"
