--- a/autocorrect/Cargo.toml
+++ b/autocorrect/Cargo.toml
@@ -22,7 +22,7 @@ lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1"
-serde = "1"
+serde = {version = "1", features = ["derive"]}
 serde_json = "1.0.66"
 serde_yaml = "0.8"
 
