--- a/autocorrect-tauri/package.json
+++ b/autocorrect-tauri/package.json
@@ -19,11 +19,12 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "cross-env BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tauri": "tauri"
+    "start": "cross-env BROWSER=none craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
+    "tauri": "tauri",
+    "icon": "npx @tauri-apps/tauricon app-icon.png"
   },
   "eslintConfig": {
     "extends": [
@@ -44,8 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.3",
     "@tauri-apps/cli": "^1.0.0",
+    "craco-less": "^2.0.0",
     "cross-env": "^7.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "tailwindcss": "^3.1.3"
   }
 }
