--- a/autocorrect-tauri/package.json
+++ b/autocorrect-tauri/package.json
@@ -51,6 +51,7 @@
     "cross-env": "^7.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "sass": "^1.52.3",
     "tailwindcss": "^3.1.3"
   }
 }
