--- a/autocorrect-tauri/src-tauri/Cargo.toml
+++ b/autocorrect-tauri/src-tauri/Cargo.toml
@@ -1,24 +1,24 @@
 [package]
-authors = ["you"]
-default-run = "app"
-description = "A Tauri App"
+authors = ["Jason Lee <huacnlee@gmail.com>"]
+default-run = "autocorrect"
+description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
 edition = "2021"
-license = ""
-name = "app"
-repository = ""
+license = "MIT"
+name = "autocorrect"
+repository = "https://github.com/huacnlee/autocorrect"
 rust-version = "1.57"
-version = "0.1.0"
+version = "0.1.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = {version = "1.0.0", features = [] }
+tauri-build = {version = "1.0.0", features = []}
 
 [dependencies]
 autocorrect = {path = "../../autocorrect"}
-serde = {version = "1.0", features = ["derive"] }
+serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-tauri = {version = "1.0.0", features = ["api-all"] }
+tauri = {version = "1.0.0", features = ["api-all"]}
 
 [features]
 # by default Tauri runs in production mode
