--- a/.github/workflows/release-tauri.yml
+++ b/.github/workflows/release-tauri.yml
@@ -6,6 +6,37 @@ on:
     tags:
       - "tauri-v*"
 jobs:
+  create-release:
+    runs-on: ubuntu-latest
+    outputs:
+      RELEASE_ID: ${{ steps.create-release.outputs.result }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - uses: olegtarasov/get-tag@v2.1
+        id: tagName
+        with:
+          tagRegex: "v(?<version>.*)"
+      - name: create release
+        id: create-release
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data } = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: "tauri-v${{ steps.tagName.outputs.version }}",
+              name: "AutoCorrect Desktop v${{ steps.tagName.outputs.version }}",
+              body: "See the assets to download this version and install.",
+              draft: true,
+              prerelease: false
+            })
+
+            return data.id
   publish-tauri:
     strategy:
       fail-fast: false
@@ -67,13 +98,10 @@ jobs:
           APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
           APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
           APPLE_SIGNING_IDENTITY: 49AD00B657FC50C78045B23504501BAEE745A0BE
-          APPLE_ID: huacnlee@gmail.com
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
         with:
+          releaseId: ${{ needs.create-release.outputs.RELEASE_ID }}
           args: --target ${{ matrix.target }} -- -v
           projectPath: autocorrect-tauri/
+          releaseName: "AutoCorrect Desktop v__VERSION__"
           tagName: tauri-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
-          releaseName: "AutoCorrect v__VERSION__"
-          releaseBody: "See the assets to download this version and install."
-          releaseDraft: true
-          prerelease: false
+
