--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Test
         run: cargo test
 
+      - name: Test Node.js
+        run: make test:node
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
