--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Publish NPM for Bundler
         run: |
+          git config advice.addIgnoredFile false
           echo $(git describe --abbrev=0 --tags | sed "s/^v//")
           make wasm:publish
         env:
@@ -50,6 +51,7 @@ jobs:
 
       - name: Publish NPM for Node.js
         run: |
+          git config advice.addIgnoredFile false
           echo $(git describe --abbrev=0 --tags | sed "s/^v//")
           make node:publish
         env:
