--- a/autocorrect/Cargo.toml
+++ b/autocorrect/Cargo.toml
@@ -24,6 +24,7 @@ pest_derive = "2.3.1"
 regex = "1"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1.0.83"
+serde_repr = "0.1"
 serde_yaml = "0.9.9"
 
 [dev-dependencies]
