--- a/autocorrect-wasm/Cargo.toml
+++ b/autocorrect-wasm/Cargo.toml
@@ -9,8 +9,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 autocorrect = {path = "../autocorrect", version = ">=1.9.0"}
 serde = {version = "1.0.127", features = ["derive"]}
+serde-wasm-bindgen = "0.4.5"
 serde_json = "1.0.66"
-wasm-bindgen = {version = "0.2.80", features = ["serde-serialize"]}
+wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
