--- a/autocorrect-py/Cargo.toml
+++ b/autocorrect-py/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "autocorrect-py"
 description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
 edition = "2018"
 homepage = "https://github.com/huacnlee/autocorrect"
 license = "MIT"
-readme = "../README.md"
+name = "autocorrect-py"
+readme = "README.md"
 repository = "https://github.com/huacnlee/autocorrect"
 version = "2.1.1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "autocorrect_py"
 crate-type = ["cdylib"]
+name = "autocorrect_py"
 
 [dependencies]
 autocorrect = {path = "../autocorrect", version = ">1.0.0"}
